--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python-telegram-bot
-python-dotenv
-torch
-numpy
-tiktoken
-PyYAML
-pandas
+python-telegram-bot==20.7
+python-dotenv==1.1.1
+torch==2.8.0
+numpy==2.3.2
+tiktoken==0.11.0
+PyYAML==6.0.2
+pandas==2.3.1
