feat: make THRESHOLD_BYTES configurable

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 TELEGRAM_TOKEN=
 # Optional maximum number of stored user lines; leave empty for no limit
 MAX_USER_LINES=
+# Optional threshold in bytes for logged repository changes
+THRESHOLD_BYTES=
